tests/baselines/reference/objectTypesIdentity(strict=true).errors.txt
objectTypesIdentity.ts(4,5): error TS2564: Property 'foo' has no initializer and is not definitely assigned in the constructor.
objectTypesIdentity.ts(8,5): error TS2564: Property 'foo' has no initializer and is not definitely assigned in the constructor.
objectTypesIdentity.ts(12,5): error TS2564: Property 'foo' has no initializer and is not definitely assigned in the constructor.
objectTypesIdentity.ts(22,10): error TS7010: 'foo1', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentity.ts(23,10): error TS7010: 'foo1', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentity.ts(26,10): error TS7010: 'foo1b', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentity.ts(27,10): error TS7010: 'foo1b', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentity.ts(30,10): error TS7010: 'foo1c', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentity.ts(31,10): error TS7010: 'foo1c', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentity.ts(34,10): error TS7010: 'foo2', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentity.ts(35,10): error TS7010: 'foo2', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentity.ts(38,10): error TS7010: 'foo3', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentity.ts(39,10): error TS7010: 'foo3', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentity.ts(42,10): error TS7010: 'foo4', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentity.ts(43,10): error TS7010: 'foo4', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentity.ts(46,10): error TS7010: 'foo5', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentity.ts(47,10): error TS7010: 'foo5', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentity.ts(50,10): error TS7010: 'foo5b', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentity.ts(51,10): error TS7010: 'foo5b', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentity.ts(54,10): error TS7010: 'foo6', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentity.ts(55,10): error TS7010: 'foo6', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentity.ts(58,10): error TS7010: 'foo7', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentity.ts(59,10): error TS7010: 'foo7', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentity.ts(62,10): error TS7010: 'foo8', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentity.ts(63,10): error TS7010: 'foo8', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentity.ts(66,10): error TS7010: 'foo9', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentity.ts(67,10): error TS7010: 'foo9', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentity.ts(70,10): error TS7010: 'foo10', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentity.ts(71,10): error TS7010: 'foo10', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentity.ts(74,10): error TS7010: 'foo11', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentity.ts(75,10): error TS7010: 'foo11', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentity.ts(78,10): error TS7010: 'foo12', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentity.ts(79,10): error TS7010: 'foo12', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentity.ts(82,10): error TS7010: 'foo13', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentity.ts(83,10): error TS7010: 'foo13', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentity.ts(86,10): error TS7010: 'foo14', which lacks return-type annotation, implicitly has an 'any' return type.
objectTypesIdentity.ts(87,10): error TS7010: 'foo14', which lacks return-type annotation, implicitly has an 'any' return type.


==== objectTypesIdentity.ts (37 errors) ====
    // object types are identical structurally
    
    class A {
        foo: string;
        ~~~
!!! error TS2564: Property 'foo' has no initializer and is not definitely assigned in the constructor.
    }
    
    class B {
        foo: string;
        ~~~
!!! error TS2564: Property 'foo' has no initializer and is not definitely assigned in the constructor.
    }
    
    class C<T> {
        foo: T;
        ~~~
!!! error TS2564: Property 'foo' has no initializer and is not definitely assigned in the constructor.
    }
    
    interface I {
        foo: string;
    }
    
    var a: { foo: string; }
    var b = { foo: '' };
    
    function foo1(x: A);
             ~~~~
!!! error TS7010: 'foo1', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo1(x: A); // error
             ~~~~
!!! error TS7010: 'foo1', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo1(x: any) { }
    
    function foo1b(x: B);
             ~~~~~
!!! error TS7010: 'foo1b', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo1b(x: B); // error
             ~~~~~
!!! error TS7010: 'foo1b', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo1b(x: any) { }
    
    function foo1c(x: C<string>);
             ~~~~~
!!! error TS7010: 'foo1c', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo1c(x: C<string>); // error
             ~~~~~
!!! error TS7010: 'foo1c', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo1c(x: any) { }
    
    function foo2(x: I);
             ~~~~
!!! error TS7010: 'foo2', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo2(x: I); // error
             ~~~~
!!! error TS7010: 'foo2', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo2(x: any) { }
    
    function foo3(x: typeof a);
             ~~~~
!!! error TS7010: 'foo3', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo3(x: typeof a); // error
             ~~~~
!!! error TS7010: 'foo3', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo3(x: any) { }
    
    function foo4(x: typeof b);
             ~~~~
!!! error TS7010: 'foo4', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo4(x: typeof b); // error
             ~~~~
!!! error TS7010: 'foo4', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo4(x: any) { }
    
    function foo5(x: A);
             ~~~~
!!! error TS7010: 'foo5', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo5(x: B); // error
             ~~~~
!!! error TS7010: 'foo5', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo5(x: any) { }
    
    function foo5b(x: A);
             ~~~~~
!!! error TS7010: 'foo5b', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo5b(x: C<string>); // error
             ~~~~~
!!! error TS7010: 'foo5b', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo5b(x: any) { }
    
    function foo6(x: A);
             ~~~~
!!! error TS7010: 'foo6', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo6(x: I); // error
             ~~~~
!!! error TS7010: 'foo6', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo6(x: any) { }
    
    function foo7(x: A);
             ~~~~
!!! error TS7010: 'foo7', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo7(x: typeof a); // error
             ~~~~
!!! error TS7010: 'foo7', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo7(x: any) { }
    
    function foo8(x: B);
             ~~~~
!!! error TS7010: 'foo8', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo8(x: I); // error
             ~~~~
!!! error TS7010: 'foo8', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo8(x: any) { }
    
    function foo9(x: B);
             ~~~~
!!! error TS7010: 'foo9', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo9(x: C<string>); // error
             ~~~~
!!! error TS7010: 'foo9', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo9(x: any) { }
    
    function foo10(x: B);
             ~~~~~
!!! error TS7010: 'foo10', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo10(x: typeof a); // error
             ~~~~~
!!! error TS7010: 'foo10', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo10(x: any) { }
    
    function foo11(x: B);
             ~~~~~
!!! error TS7010: 'foo11', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo11(x: typeof b); // error
             ~~~~~
!!! error TS7010: 'foo11', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo11(x: any) { }
    
    function foo12(x: I);
             ~~~~~
!!! error TS7010: 'foo12', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo12(x: C<string>); // error
             ~~~~~
!!! error TS7010: 'foo12', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo12(x: any) { }
    
    function foo13(x: I);
             ~~~~~
!!! error TS7010: 'foo13', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo13(x: typeof a); // error
             ~~~~~
!!! error TS7010: 'foo13', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo13(x: any) { }
    
    function foo14(x: I);
             ~~~~~
!!! error TS7010: 'foo14', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo14(x: typeof b); // error
             ~~~~~
!!! error TS7010: 'foo14', which lacks return-type annotation, implicitly has an 'any' return type.
    function foo14(x: any) { }